# chain-of-thought-distillation

code/: .env  .gitattributes  .gitignore  ideas.txt  notes.txt  plan.md  pyproject.toml
code/.ipynb_checkpoints/: pyproject-checkpoint.toml
code/artifacts/data/processed/: dataset.jsonl
code/artifacts/data/raw/: dataset_meta.json  teacher_gsm8k_test.jsonl  teacher_gsm8k_test_meta.json
code/artifacts/models/qwen2.5_3b_labelonly_lora/checkpoint-200/: adapter_config.json  adapter_model.safetensors  optimizer.pt  (+3 more)
code/data/: teacher_cots.jsonl  teacher_cots.meta.json
code/notebooks/: 01_extract_chain_of_thoughts.ipynb  Untitled.ipynb  benchmark.ipynb  benchmark_predictions_analysis.ipynb  best_models_predictions.csv  clean_dataset.ipynb  dataset_anlysis.ipynb  process_dataset.ipynb  process_dataset_prototype.ipynb  teacher_test_accuracy.ipynb  train_student.ipynb  train_student_label_only.ipynb  train_student_sctod.ipynb
code/notebooks/.ipynb_checkpoints/: benchmarking-checkpoint.ipynb  train_student-checkpoint.ipynb
code/notebooks/prototype/: clean_dataset.ipynb  dataset_anlysis.ipynb
code/prompts/cot/: system.txt
code/prompts/label_only/: system.txt  user.txt
code/prompts/teacher/: user.txt
code/prompts/teacher/.ipynb_checkpoints/: system-checkpoint.txt
code/src/: config.py  create_dataset.py  logs.py
code/src/dataset_generator/: generator.py  main.py  models.py
code/src/dataset_generator/helpers/: metrics.py
code/src/dataset_generator/io/: jsonl.py  meta.py
code/src/dataset_generator/lib/: teacher_client.py
code/src/scraper/: cot_scraper.py
(+28 files in other folders)
