[project]
name = "engineering-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]
